adapt to run in lxc centos8

--- a/tasks/certbot.yml
+++ b/tasks/certbot.yml
@@ -41,4 +41,4 @@
     name: certbot-renew.timer
     state: started
     enabled: yes
-  when: letsencrpyt.certbot.autonew == true
+  when: letsencrypt.certbot.autorenew == true
