--- a/tasks/rserve.yml
+++ b/tasks/rserve.yml
@@ -28,6 +28,8 @@
     packages:
       - R-core
       - R-core-devel
+      - openssl-devel
+      - curl-devel
   when: ansible_os_family == "RedHat"
 
 - name: install base packages on Debian/Ubuntu
