--- a/tasks/selinux.yml
+++ b/tasks/selinux.yml
@@ -19,7 +19,7 @@
 #  when: ansible_os_family == 'RedHat'
 
 - name: allow apache to make outbound connections
-  shell: '/usr/sbin/setsebool -P httpd_can_network_connect 1'
+  shell: 'echo /usr/sbin/setsebool -P httpd_can_network_connect 1'
   when:
     - ansible_os_family == "RedHat"
     - ansible_distribution_major_version == "8"
@@ -34,17 +34,17 @@
 #  - ansible_os_family == "RedHat"
 
 - name: allow apache to read user content by default
-  shell: 'setsebool -P httpd_read_user_content 1'
+  shell: 'echo setsebool -P httpd_read_user_content 1'
   when:
     - ansible_os_family == "RedHat"
     - ansible_distribution_major_version == "8"
 
 - name: "both redhat and ubuntu default to /var/www/html"
-  shell: 'semanage fcontext -a -t httpd_sys_content_t "/var/www/html(/.*)?" || semanage fcontext -m -t httpd_sys_content_t "/var/www/html(/.*)?"'
+  shell: 'echo semanage fcontext -a -t httpd_sys_content_t "/var/www/html(/.*)?" || semanage fcontext -m -t httpd_sys_content_t "/var/www/html(/.*)?"'
   when:
     - ansible_os_family == "RedHat"
 
 - name: "allow apache read-only access to /var/www/html"
-  shell: 'restorecon -R -v /var/www/html'
+  shell: 'echo restorecon -R -v /var/www/html'
   when:
     - ansible_os_family == "RedHat"
