--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -302,7 +302,7 @@ grafana:
 
 java:
   version: 17
-  home: /usr/lib/jvm/java-{{ java.version}}
+  home: /usr/lib/jvm/java-17
 
 localstack:
   enabled: false
