--- a/tasks/dataverse-postinstall.yml
+++ b/tasks/dataverse-postinstall.yml
@@ -89,9 +89,7 @@
     name: payara
     state: started
 
-- name: give Payara ample time to become ready
-  ansible.builtin.pause:
-    seconds: 150
+- ansible.builtin.import_tasks: check_index_status.yml
 
 - name: start solr indexing -- if this was an upgrade to an existing install, the install scripts reset the solr indexes
   ansible.builtin.get_url:
