--- a/tasks/dataverse-apache.yml
+++ b/tasks/dataverse-apache.yml
@@ -121,6 +121,7 @@
     - ansible_distribution_major_version == "8"
 
 - ansible.builtin.import_tasks: selinux.yml
+  when: false
 
 - name: run handlers -- this runs the apache restart scripts
   meta: flush_handlers
